--- a/public/index.html
+++ b/public/index.html
@@ -1,229 +1,146 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stremio 2.3 M3U Bot — Dashboard</title>
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #141E30, #243B55);
-      color: #fff;
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    header {
-      width: 100%;
-      padding: 15px 20px;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-      position: sticky;
-      top: 0;
-    }
-    h1 { font-size: 1.4rem; color: #00d4ff; text-shadow: 0 0 10px #00d4ff60; margin: 0; }
-    .buttons {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin: 15px 0;
-    }
-    button {
-      background: #00d4ff; color: #111; border: none; padding: 10px 16px;
-      border-radius: 8px; font-weight: 600; cursor: pointer; transition: all 0.2s;
-    }
-    button:hover { background: #00bcd4; transform: translateY(-2px); }
-    .section {
-      width: 90%; max-width: 1000px; margin: 10px auto;
-      background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    .section h2 {
-      color: #00e0ff; font-size: 1.05rem;
-      border-bottom: 1px solid rgba(255,255,255,0.2);
-      padding-bottom: 4px; margin-bottom: 8px;
-    }
-    table { width: 100%; border-collapse: collapse; color: #eee; font-size: 0.9rem; }
-    table th, table td { padding: 6px 8px; text-align: left; border-bottom: 1px solid rgba(255,255,255,0.1); }
-    table th { color: #00d4ff; }
-    #log-container {
-      max-height: 250px; overflow-y: auto; background: rgba(0, 0, 0, 0.3);
-      padding: 8px; border-radius: 8px; font-family: monospace; font-size: 0.8rem;
-    }
-    footer { margin: 15px 0 10px; font-size: 0.8rem; color: #aaa; text-align: center; }
-    @media (max-width: 600px) {
-      h1 { font-size: 1.1rem; }
-      button { padding: 8px 12px; font-size: 0.85rem; }
-      table th, table td { font-size: 0.8rem; }
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Stremio V 2.4 </title>
+<style>
+  :root{--bg:#061021;--card:#0b1220;--muted:#9ca3af;--accent:#3b82f6;--ok:#16a34a;--err:#dc2626;color-scheme: dark;}
+  body{margin:0;background:linear-gradient(180deg,#071029 0%,#031024 100%);color:#e6eef8;font-family:Inter,system-ui,Segoe UI,Roboto,Arial}
+  .wrap{max-width:1100px;margin:16px auto;padding:16px;display:flex;flex-direction:column;gap:12px}
+  header{display:flex;align-items:center;justify-content:space-between;gap:12px}
+  h1{margin:0;font-size:18px}
+  .controls button{margin-left:8px;padding:8px 10px;border-radius:8px;border:0;background:#0f1724;color:#e6eef8;cursor:pointer;border:1px solid rgba(255,255,255,0.04)}
+  .grid{display:grid;grid-template-columns:1fr 360px;gap:12px}
+  .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03);padding:12px;border-radius:10px}
+  .muted{color:var(--muted);font-size:13px}
+  .list{max-height:320px;overflow:auto}
+  .progressbar{height:12px;background:#10151a;border-radius:8px;overflow:hidden}
+  .progress{height:12px;background:linear-gradient(90deg,#00d4ff,#0066ff);width:0%}
+  .small{font-size:13px;color:var(--muted)}
+  @media (max-width:900px){ .grid{grid-template-columns:1fr} }
+</style>
 </head>
 <body>
-  <header><h1>Stremio M3U Bot — Real-time Monitoring</h1></header>
+  <div class="wrap">
+    <header>
+      <h1>Stremio M3U Bot — Dashboard</h1>
+      <div class="controls">
+        <button onclick="fetchAll()">Refresh</button>
+      </div>
+    </header>
 
-  <div class="buttons">
-    <button onclick="manualRefresh()">🔄 Refresh</button>
-    <button onclick="control('rebuild')">⚙️ Force Rebuild</button>
-    <button onclick="control('restart')">🚀 Restart Bot</button>
-    <button onclick="control('clearlogs')">🧹 Clear Logs</button>
-  </div>
+    <div class="grid">
+      <div class="card">
+        <h3>Upload Progress</h3>
+        <div id="overall" class="small">No active uploads</div>
+        <div style="margin-top:10px">
+          <div class="progressbar"><div id="overallBar" class="progress"></div></div>
+        </div>
 
-  <div class="section">
-    <h2>Bot Status</h2>
-    <p id="status">Loading...</p>
-  </div>
+        <h4 style="margin-top:12px">Queue</h4>
+        <div class="list" id="queueList">
+          <div class="small">No items</div>
+        </div>
+      </div>
 
-  <div class="section">
-    <h2>Current M3U File</h2>
-    <p id="file">Loading...</p>
-  </div>
+      <div class="card">
+        <h3>Server Folders</h3>
+        <div id="folders" class="small">Loading...</div>
+        <hr style="border:none;border-top:1px solid rgba(255,255,255,0.03);margin:10px 0">
+        <h3>Recent Logs</h3>
+        <div id="logs" class="list small">Loading...</div>
+      </div>
+    </div>
 
-  <div class="section">
-    <h2>Quick Metrics</h2>
-    <p id="metrics">Loading...</p>
+    <div class="card">
+      <h3>Details</h3>
+      <div id="detail" class="small">—</div>
+    </div>
   </div>
-<!-- Add after "Quick Metrics" section -->
-<div class="section" id="upload-progress">
-  <h2>Upload Progress</h2>
-  <p id="upload-status">No active uploads.</p>
-  <div style="background:#333;border-radius:6px;overflow:hidden;height:14px;">
-    <div id="progress-bar" style="width:0%;background:#00e0ff;height:14px;transition:width 0.5s;"></div>
-  </div>
-</div>
-
-<div class="section" id="folder-list">
-  <h2>Server Folders</h2>
-  <ul id="folders" style="list-style:none;padding:0;margin:0;"></ul>
-</div>
 
 <script>
-async function refreshProgress() {
-  try {
-    const p = await fetch('/progress').then(r => r.json());
-    const bar = document.getElementById('progress-bar');
-    const status = document.getElementById('upload-status');
+async function fetchJSON(url){ try{ const r=await fetch(url); return await r.json(); }catch(e){return null;} }
 
-    if (p.active) {
-      const percent = ((p.completed / p.total) * 100).toFixed(1);
-      bar.style.width = percent + '%';
-      status.textContent = `Uploading: ${p.currentFile} (${p.completed}/${p.total})`;
-    } else {
-      bar.style.width = '0%';
-      status.textContent = 'No active uploads.';
-    }
-  } catch (e) {
-    console.warn(e);
-  }
+async function renderQueue(){
+  const q = await fetchJSON('/queue');
+  const container = document.getElementById('queueList');
+  container.innerHTML = '';
+  if (!q || !q.length){ container.innerHTML = '<div class="small">No items</div>'; return; }
+  q.forEach(item => {
+    const el = document.createElement('div');
+    el.style.marginBottom='10px';
+    const pct = item.totalBytes ? Math.min(100, Math.round((item.bytesDownloaded/item.totalBytes)*100)) : (item.status==='done'?100:0);
+    el.innerHTML = `
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <div style="font-weight:600">${escapeHtml(item.name)}</div>
+        <div class="small">${item.status}${item.eta ? ' • ETA: '+formatSec(item.eta) : ''}</div>
+      </div>
+      <div style="height:8px;margin-top:6px;background:#0b1114;border-radius:6px;overflow:hidden">
+        <div style="height:8px;background:linear-gradient(90deg,#00d4ff,#0066ff);width:${pct}%"></div>
+      </div>
+    `;
+    container.appendChild(el);
+  });
 }
 
-async function refreshFolders() {
-  try {
-    const f = await fetch('/folders').then(r => r.json());
-    const list = document.getElementById('folders');
-    list.innerHTML = '';
-    if (f.ok && f.folders.length) {
-      f.folders.forEach(fd => {
-        const li = document.createElement('li');
-        li.textContent = '📁 ' + fd;
-        list.appendChild(li);
-      });
-    } else list.innerHTML = '<li style="color:#999;">No folders found</li>';
-  } catch (e) {
-    console.warn(e);
-  }
+async function renderProgress(){
+  const p = await fetchJSON('/progress');
+  const overall = document.getElementById('overall');
+  const bar = document.getElementById('overallBar');
+  if (!p) { overall.textContent = 'No data'; return; }
+  const { total, completed, active, current } = p;
+  const percent = total ? Math.round((completed/total)*100) : 0;
+  overall.textContent = `Completed ${completed}/${total} • Active: ${active} ${current ? '• '+current.name : ''}`;
+  bar.style.width = percent + '%';
+
+  // detail
+  const detail = document.getElementById('detail');
+  if (current) {
+    detail.innerHTML = `<b>Current:</b> ${escapeHtml(current.name)}<br>
+      Status: ${escapeHtml(current.status || '')} • ${(current.totalBytes? (Math.round((current.bytesDownloaded/current.totalBytes)*100)) + '%' : '')}
+      ${current.eta ? '<br>ETA: '+formatSec(current.eta) : ''}`;
+  } else detail.innerHTML = 'No active file';
 }
 
-setInterval(() => {
-  refreshProgress();
-  refreshFolders();
-}, 5000);
+async function renderFolders(){
+  const f = await fetchJSON('/folders');
+  const el = document.getElementById('folders');
+  if (!f || !f.ok) { el.textContent = 'Unable to fetch folders'; return; }
+  if (!f.folders || !f.folders.length) { el.textContent = 'No folders'; return; }
+  el.innerHTML = f.folders.map(x=>`📁 ${escapeHtml(x)}`).join('<br>');
+}
+
+async function renderLogs(){
+  const l = await fetchJSON('/logs');
+  const box = document.getElementById('logs');
+  box.innerHTML = '';
+  if (!l) { box.textContent = 'No logs'; return; }
+  l.slice().reverse().forEach(entry => {
+    const d = document.createElement('div');
+    d.style.padding='6px 0';
+    d.innerHTML = `<div style="color:#93c5fd;font-size:12px">${entry.ts || ''}</div><div>${escapeHtml(entry.msg || entry.message || JSON.stringify(entry))}</div>`;
+    box.appendChild(d);
+  });
+}
+
+function formatSec(s){
+  if (s == null) return '';
+  s = Math.max(0, Math.floor(s));
+  const h = Math.floor(s/3600); const m = Math.floor((s%3600)/60); const sec = s%60;
+  if (h) return `${h}h ${m}m`;
+  if (m) return `${m}m ${sec}s`;
+  return `${sec}s`;
+}
+
+function escapeHtml(s){ if(!s) return ''; return String(s).replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+async function fetchAll(){
+  await Promise.all([renderQueue(), renderProgress(), renderFolders(), renderLogs()]);
+}
+
+fetchAll();
+setInterval(fetchAll, 2000);
 </script>
-
-  <div class="section">
-    <h2>Upload History (Last 10)</h2>
-    <table>
-      <thead><tr><th>File</th><th>Size</th><th>Uploaded</th><th>Items</th></tr></thead>
-      <tbody id="history"><tr><td colspan="4">Loading...</td></tr></tbody>
-    </table>
-  </div>
-
-  <div class="section">
-    <h2>Recent Logs</h2>
-    <div id="log-container">Loading...</div>
-  </div>
-
-  <footer>
-    Connection: <span id="connection">Polling</span> — Last update: <span id="last-update">—</span>
-  </footer>
-
-  <script>
-    const els = {
-      status: document.getElementById('status'),
-      file: document.getElementById('file'),
-      metrics: document.getElementById('metrics'),
-      history: document.getElementById('history'),
-      logs: document.getElementById('log-container'),
-      update: document.getElementById('last-update')
-    };
-
-    async function fetchJSON(url) {
-      try {
-        const res = await fetch(url);
-        if (!res.ok) throw new Error(`${url}: ${res.status}`);
-        return await res.json();
-      } catch (err) {
-        console.warn('Fetch error', url, err);
-        return null;
-      }
-    }
-
-    async function refreshAll() {
-      const [status, file, history, logs, sys, preview] = await Promise.all([
-        fetchJSON('/status'),
-        fetchJSON('/fileinfo'),
-        fetchJSON('/history'),
-        fetchJSON('/logs'),
-        fetchJSON('/sysinfo'),
-        fetchJSON('/preview')
-      ]);
-
-      if (status)
-        els.status.innerHTML = `<b>Online:</b> ${status.active} | <b>Uptime:</b> ${status.uptime} | <b>Ping:</b> ${status.ping}ms`;
-      if (file)
-        els.file.textContent = `${file.name} (${(file.size/1024).toFixed(1)} KB, ${file.items} items)`;
-      if (sys)
-        els.metrics.textContent = `CPU: ${sys.cpu}% | Memory: ${sys.memory}% | Disk: ${sys.disk}% | Uptime: ${sys.uptime}`;
-      if (history)
-        els.history.innerHTML = history.map(h => `<tr><td>${h.name}</td><td>${(h.size/1024).toFixed(1)} KB</td><td>${new Date(h.uploaded).toLocaleString()}</td><td>${h.items}</td></tr>`).join('');
-      if (logs)
-        els.logs.innerHTML = logs.map(l => `[${new Date(l.timestamp).toLocaleTimeString()}] [${l.type}] ${l.message}`).join('<br>');
-
-      els.update.textContent = new Date().toLocaleString();
-    }
-
-    function manualRefresh() {
-      appendLog("INFO", "Manual refresh triggered.");
-      refreshAll();
-    }
-
-    async function control(action) {
-      appendLog("ACTION", `${action} requested.`);
-      await fetch(`/control/${action}`, { method: "POST" });
-      if (action === 'clearlogs') els.logs.innerHTML = '';
-      refreshAll();
-    }
-
-    function appendLog(level, msg) {
-      const time = new Date().toLocaleTimeString();
-      els.logs.innerHTML += `[${time}] [${level}] ${msg}<br>`;
-      els.logs.scrollTop = els.logs.scrollHeight;
-    }
-
-    refreshAll();
-    setInterval(refreshAll, 50000);
-  </script>
 </body>
 </html>
